kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-go
  template:
    metadata:
      labels:
        app: kube-go
    spec:
      volumes:
      - name: logs-storage
        persistentVolumeClaim:
          claimName: go-test-pvc
      containers:
      - name: kube-go
        image: ssporyshev/wb_go:v2
        volumeMounts:
        - mountPath: "/usr/src/app/logs"
          name: logs-storage
        ports:
        - containerPort: 4000
          protocol: TCP
