kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-go-svc
  namespace: default
spec:
  selector:
    app: kube-go
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
